[package]
name = "nes"
version = "0.1.0"
authors = ["CatWithSailorHat <catwithsailorhat@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
serde = { version = "1.0.119", features = ["derive"] }
bincode = "1.3.1"
